--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-5CYG3EQ1KM');
 </script> -->
 
-<meta property=’og:title’ content="Groove Side Gaming"/>
+<meta property=’og:title’ content="SouthSweeps"/>
 <meta property="og:image" content="imagepat.png"/>
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -32,7 +32,7 @@
 	
 	
 	
-<title>GrooveSide Gaming</title>
+<title>SouthSweeps</title>
 <link rel="dns-prefetch" href="https://s0.wp.com/">
 <link rel="dns-prefetch" href="https://wordpress.com/">
 <link href="https://fonts.gstatic.com/" crossorigin="" rel="preconnect">
