--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 	 
 </style>
 <div class="nospace">
-<img src="1.png" style="width:439px;height:800px;">
-<img src="2.png" style="width:439px;height:800px;">
-<img src="3.png" style="width:439px;height:800px;">
+<img src="pageone.png" style="width:439px;height:800px;">
+<img src="pagetwo.png" style="width:439px;height:800px;">
+<!-- <img src="3.png" style="width:439px;height:800px;"> -->
 </div>
 	
 
