--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script> -->
 
 <meta property=’og:title’ content="SouthSweeps"/>
-<meta property="og:image" content="imagepat.png"/>
+<meta property="og:image" content="pageone.png"/>
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
