--- a/index.html
+++ b/index.html
@@ -205,15 +205,15 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 
 
 
-<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://www.vpower123.com/" style="border-radius:100px;">VPower</a></div>
+<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://pandamaster.com/app/" style="border-radius:100px;">PandaMaster</a></div>
 
 <div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="http://firekirin.xyz:8580/index.html" style="border-radius:100px;">FireKirin</a></div>
 
 <div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://dl.juwa777.com/" style="border-radius:100px;">Juwa</a></div>
 
+<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://www.gameroom777.com/" style="border-radius:100px;">GameroomOnline</a></div>
 
-
-<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="http://orionstars.vip:8580/index.html" style="border-radius:100px;">OrionStar</a></div>
+<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="http://orionstars.vip:8580/index.html" style="border-radius:100px;">OrionStars</a></div>
 </div>
 </div>
 </div></div>
