--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 
 
 
-<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://dl.highstakesweeps.com/" style="border-radius:100px;">HighStakes</a></div>
+<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://highrollersweep.cc/" style="border-radius:100px;">HighRoller</a></div>
 
 
 
