--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-5CYG3EQ1KM');
 </script> -->
 
-<meta property=’og:title’ content="SouthSweeps"/>
+<meta property=’og:title’ content="SouthSweeps$$"/>
 <meta property="og:image" content="pageone.png"/>
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
