--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   gtag('config', 'G-5CYG3EQ1KM');
 </script> -->
 
-<meta property=’og:title’ content="SouthSweeps$$"/>
+<!-- <meta property=’og:title’ content="SouthSweeps$$"/>
 <meta property="og:image" content="pageone.png"/>
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="noindex, nofollow">
-	
+	 -->
 	
 	
 	
