--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 <div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://www.gameroom777.com/" style="border-radius:100px;">GameroomOnline</a></div>
 
 <div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="http://orionstars.vip:8580/index.html" style="border-radius:100px;">OrionStars</a></div>
+
+<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://www.casinoignite.vip/" style="border-radius:100px;">CasinoIgnite</a></div>
 </div>
 </div>
 </div></div>
