--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 <div class="nospace">
 <img src="pageone.png" style="width:439px;height:800px;">
 <img src="pagetwo.png" style="width:439px;height:800px;">
+<img src="pagethree.png" style="width:439px;height:800px;">
+<img src="pagefour.png" style="width:439px;height:800px;">
 <!-- <img src="3.png" style="width:439px;height:800px;"> -->
 </div>
 	
@@ -203,9 +205,9 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 
 <div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://highrollersweep.cc/" style="border-radius:100px;">HighRoller</a></div>
 
+<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://download.gamevault999.com//" style="border-radius:100px;">GameVault</a></div>
 
-
-<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://pandamaster.com/app/" style="border-radius:100px;">PandaMaster</a></div>
+<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="https://virgo777.co/" style="border-radius:100px;">Virgo777</a></div>
 
 <div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link has-foreground-background-color has-background wp-element-button" href="http://firekirin.xyz:8580/index.html" style="border-radius:100px;">FireKirin</a></div>
 
