--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   gtag('config', 'G-5CYG3EQ1KM');
 </script> -->
 
-<meta property=’og:title’ content="SouthSweeps$$"/>
-<meta property="og:image" content="pageone.png"/>
+<meta property=’og:title’ content="PeterBuckner$$"/>
+<meta property="og:image" content="pagetwo.png"/>
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta charset="UTF-8">
@@ -32,7 +32,7 @@
 	
 	
 	
-<title>SouthSweeps</title>
+<title>PeterBuckner</title>
 <link rel="dns-prefetch" href="https://s0.wp.com/">
 <link rel="dns-prefetch" href="https://wordpress.com/">
 <link href="https://fonts.gstatic.com/" crossorigin="" rel="preconnect">
